java: Set release version to Java 17 (#374)
* Set default release version to 17
* Enable Error prone with Nullaway
* Enable Checkstyle